Cross-platform shared memory (create/attach) + Tidy.Later cleanup; v0.5.6
flow: add Tidy.Clean and Tidy.Later — a sole-owner handle for resources that
outlive any lexical scope, with run-once cleanup backstopped by a JVM shutdown
hook and a GC Cleaner. Reapable is kept separate from Later so the backstops
don't pin it (else GC could never reclaim it). Plus Resource.clean/Clean
(scoped + shutdown-backstopped) and Resource.closedLater (unmanaged acquire).
AndClose variants never drop or mask errors: nice/flatNice fold the close
failure into the Ask, use/op use try-with-resources addSuppressed.

eio: SharedMemory.createNamed — create a fresh, RAM-resident, OS-named object
(random opaque names, exclusive-create with bounded retry, RAM-or-fail, no disk
fallback) returning the owning Tidy.Later; attach gains the native macOS/Windows
paths. Full OS-error parity via FFM captureCallState (errno / GetLastError) for
collision detection and meaningful failure codes across all three platforms.
The native paths require --enable-native-access (documented). Linux path is
runtime-tested; macOS/Windows compile-only here.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>